# qork

./: .gitignore  Cargo.toml  README.md  build.rs  nfpm.yaml
.github/workflows/: ci.yml  crates-publish.yml  unix-installers.yml  windows-installers.yml
inno/: corporate.iss  global.iss
man/: qork.1
src/: api.rs  check.rs  cli.rs  command.rs  config.rs  error.rs  lib.rs  main.rs  update.rs
tests/: cli.rs
wix/: main.wxs
wix-corporate/: corporate.wxs
